# dunst

./: .gitignore  .lycheeignore  .mcp.json  BUGS-TODO.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSING.md  NOTICE  README.md  deny.toml  prek.toml  release-plz.toml
.github/: CODEOWNERS
.github/workflows/: audit-cron.yml  auto-merge-release.yml  ci.yml  cleanup-branches.yml  codeql.yml  docs-lint.yml  nightly.yml  release-plz.yml  semgrep.yml  shellcheck.yml
crates/dunst-core/: Cargo.toml
crates/dunst-core/fixtures/: notes.json
crates/dunst-core/src/: lib.rs  traits.rs  types.rs
crates/dunst-graph/: Cargo.toml
crates/dunst-graph/benches/: pipeline.rs
crates/dunst-graph/src/: affordance.rs  audit.rs  lib.rs  risk.rs  scene.rs
crates/dunst-graph/tests/: fixes.rs  wp_b.rs  wp_d.rs
crates/dunst-mcp/: Cargo.toml  build.rs
crates/dunst-mcp/src/: engine.rs  main.rs  serve.rs
crates/dunst-mcp/src/engine/: action.rs  action_resolution.rs  app_ops.rs  apps.rs  browser_query.rs  chart.rs  choices.rs  element_actions.rs  file_select.rs  helper_tests.rs  input.rs  ocr_read.rs  query_support.rs  raw_input.rs  raw_input_gate.rs  read.rs  runtime_support.rs  scene_query.rs  selections.rs  tests.rs  types.rs  window_geometry.rs  window_ops.rs
crates/dunst-mcp/src/engine/raw_input/: keyboard.rs
crates/dunst-mcp/src/engine/read/: perception.rs
crates/dunst-mcp/src/engine/scene_query/: browser_chrome.rs
crates/dunst-mcp/src/engine/tests/: actions.rs  choices.rs  drag_type.rs  graph_views.rs  page_text.rs  raw_window.rs  selections.rs
crates/dunst-mcp/src/engine/window_ops/: probes.rs
crates/dunst-mcp/src/serve/: coordination.rs  dispatch.rs  registry.rs  response.rs  tests.rs  tools.rs
crates/dunst-mcp/src/serve/dispatch/: args.rs  batch_tools.rs  element_tools.rs  raw_tools.rs  read_tools.rs  window_app_tools.rs
crates/dunst-mcp/src/serve/tests/: catalog.rs  dispatcher.rs  raw_tools.rs  responses.rs
crates/dunst-mcp/tests/: cli.rs
crates/dunst-platform/: Cargo.toml
crates/dunst-platform/examples/: action_latency.rs  dump.rs  noforeground_check.rs
crates/dunst-platform/src/: app_control.rs  capabilities.rs  clipboard.rs  file_chooser.rs  lib.rs  macos.rs
crates/dunst-platform/src/macos/: ax_actions.rs  ax_backend.rs  ax_tree.rs  cf.rs  pointer_events.rs  skylight.rs  text_input.rs  web_events.rs
crates/dunst-vision/: Cargo.toml
crates/dunst-vision/src/: capture.rs  coords.rs  detect.rs  lib.rs  ocr.rs  shapes.rs
crates/visualops-core/: Cargo.toml
crates/visualops-core/src/: lib.rs  mock.rs  traits.rs  types.rs
crates/visualops-graph/: Cargo.toml
crates/visualops-graph/benches/: graph_bench.rs  pipeline.rs
crates/visualops-graph/src/: affordance.rs  audit.rs  lib.rs  risk.rs  scene.rs  text.rs
crates/visualops-graph/tests/: fixes.rs  wp_b.rs  wp_d.rs
crates/visualops-mcp/: Cargo.toml
crates/visualops-mcp/src/: engine.rs  main.rs  serve.rs
crates/visualops-platform/: Cargo.toml
crates/visualops-platform/examples/: action_latency.rs  dump.rs  noforeground_check.rs
crates/visualops-platform/src/: lib.rs
crates/visualops-vision/: Cargo.toml
crates/visualops-vision/src/: capture.rs  coords.rs  detect.rs  lib.rs  ocr.rs  shapes.rs
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  AUDIT-cycle.md  AUDIT-platform.md  AUDIT-triage.md  BINARY_USAGE_REX.md  CODE_NAVIGATION.md  CONTRACTS.md  DISTRIBUTION_READINESS_PLAN.md  DUNST-UI-REMEDIATION-PLAN.md  FIX-graph.md  FIX-platform.md  P1-vision-rust-feasibility.md  P1-vision-surfaces.md  README.md  WP-A-platform.md  WP-B-graph.md  WP-C-platform-batch.md  WP-D-graph-stableids.md  WP-F-platform-actions.md  WP-G-mcp-drag.md  WP-H-vision-capture-ocr.md  WP-I-vision-coords.md  WP-J-mcp-projection.md  WP-K-platform-noforeground.md  review-graph.md  review-platform.md
docs/design/: LLD-batch-choice-enumeration-selection.md
docs/fixtures/: mcp-transcript.jsonl
docs/reviews/: 2026-06-14-audit.md  2026-06-20-navigation-audit.md  2026-06-21-audit.md  2026-06-21-raw-input-follow-up.md  2026-06-22-readme-cycle.md  2026-06-23-raw-input-code-tangle.md
scripts/: check-doc-links.py  mcp-chrome.sh  mcp-dunst.sh  mcp-notes.sh  smoke-live.py  smoke-live.sh
