[workspace]
resolver = "2"
members = [
    "crates/visualops-core",
    "crates/visualops-graph",
    "crates/visualops-platform",
    "crates/visualops-mcp",
    "crates/visualops-vision",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
visualops-core = { path = "crates/visualops-core" }
visualops-graph = { path = "crates/visualops-graph" }
visualops-platform = { path = "crates/visualops-platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
