[workspace]
resolver = "2"
members = [
    "crates/visualops-core",
    "crates/visualops-graph",
    "crates/visualops-platform",
    "crates/visualops-mcp",
    "crates/visualops-vision",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
visualops-core = { path = "crates/visualops-core" }
visualops-graph = { path = "crates/visualops-graph" }
visualops-platform = { path = "crates/visualops-platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Shared lints, opted into per-crate with `[lints] workspace = true`. We do NOT
# enable `unwrap_used`/`expect_used` (they would flag the many justified `unwrap`s
# outside tests). The goal is narrow: make every `unsafe` block carry a `// SAFETY:`
# note. Crates with FFI (visualops-platform, visualops-vision) opt in and document
# their blocks; pure crates inherit it for free.
[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
