[workspace]
resolver = "2"
members = [
    "crates/dunst-core",
    "crates/dunst-graph",
    "crates/dunst-platform",
    "crates/dunst-mcp",
    "crates/dunst-vision",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/azerozero/dunst"
homepage = "https://github.com/azerozero/dunst"
readme = "README.md"

[workspace.dependencies]
dunst-core = { version = "0.1.0", path = "crates/dunst-core" }
dunst-graph = { version = "0.1.0", path = "crates/dunst-graph" }
dunst-platform = { version = "0.1.0", path = "crates/dunst-platform" }
dunst-vision = { version = "0.1.0", path = "crates/dunst-vision" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Shared lints, opted into per-crate with `[lints] workspace = true`. We do NOT
# enable `unwrap_used`/`expect_used` (they would flag the many justified `unwrap`s
# outside tests). The goal is narrow: make every `unsafe` block carry a `// SAFETY:`
# note. Crates with FFI (dunst-platform, dunst-vision) opt in and document
# their blocks; pure crates inherit it for free.
[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
