[package]
name = "dunst-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Scene graph, affordance graph, and risk derivation for dunst-mcp"
publish = false

[dependencies]
dunst-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Optional, only pulled in with `--features bench`; never compiled by `cargo test`.
criterion = { version = "0.5", optional = true, default-features = false, features = ["cargo_bench_support"] }

[features]
# `cargo bench -p dunst-graph --features bench`
bench = ["dep:criterion"]

# WP-D4: pure-pipeline baseline (build_scene_graph -> derive_affordances -> risk).
[[bench]]
name = "pipeline"
harness = false
required-features = ["bench"]

[lints]
workspace = true
