[package]
name = "dunst-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "AX-first macOS MCP server for background UI automation"
keywords = ["mcp", "macos", "accessibility", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false
default-run = "dunst-mcp"

[[bin]]
name = "dunst-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dunst-core = { workspace = true }
dunst-graph = { workspace = true }
dunst-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Apple Vision OCR is macOS-only. Pull the vision crate in ONLY under macOS so
# `dunst-mcp` stays compilable on other targets (the `read_text` tool returns a
# clear error off-macOS). Path dep — `dunst-vision` is not a
# `[workspace.dependencies]` entry.
[target.'cfg(target_os = "macos")'.dependencies]
dunst-vision = { workspace = true }

# Integration phase adds the MCP server runtime here:
#   rmcp = { version = "0.x", features = ["server", "transport-io"] }
#   tokio = { version = "1", features = ["full"] }
