[package]
name = "dunst-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dunst-core = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = { version = "0.24", features = ["elcapitan"] }
foreign-types = "0.5"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSEvent", "NSGraphicsContext"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
