[package]
name = "dunst-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "macOS Accessibility and event backend for dunst-mcp"
publish = false

[dependencies]
dunst-core = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = { version = "0.24", features = ["elcapitan", "highsierra"] }
foreign-types = "0.5"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "NSGraphicsContext"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
