[package]
name = "visualops-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "visualops-mcp"

[[bin]]
name = "visualops-mcp"
path = "src/main.rs"

[dependencies]
visualops-core = { workspace = true }
visualops-graph = { workspace = true }
visualops-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Integration phase adds the MCP server runtime here:
#   rmcp = { version = "0.x", features = ["server", "transport-io"] }
#   tokio = { version = "1", features = ["full"] }
