[package]
name = "visualops-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "visualops-mcp"

[[bin]]
name = "visualops-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
visualops-core = { workspace = true }
visualops-graph = { workspace = true }
visualops-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Apple Vision OCR is macOS-only. Pull the vision crate in ONLY under macOS so
# `visualops-mcp` stays compilable on other targets (the `read_text` tool returns a
# clear error off-macOS). Path dep — `visualops-vision` is not a
# `[workspace.dependencies]` entry.
[target.'cfg(target_os = "macos")'.dependencies]
visualops-vision = { path = "../visualops-vision" }

# Integration phase adds the MCP server runtime here:
#   rmcp = { version = "0.x", features = ["server", "transport-io"] }
#   tokio = { version = "1", features = ["full"] }
