[package]
name = "visualops-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visualops-core = { workspace = true }

# WP-A adds the macOS AX/CG stack here, e.g.:
#   accessibility-sys = "0.1"
#   core-foundation   = "0.10"
#   core-graphics     = "0.24"
#   objc2 / objc2-app-kit
[target.'cfg(target_os = "macos")'.dependencies]
