[package]
name = "visualops-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visualops-core = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"

[dev-dependencies]
serde_json = { workspace = true }
